# claws

./: .clang-format  .gitignore  .travis.yml  ArrayOps.hpp  CMakeLists.txt  CircularIterator.hpp  ConstexprAlgorithm.hpp  ContextfulContainer.hpp  Doxyfile  HandleTypes.hpp  IteratorUtil.hpp  LICENSE  LambdaOps.hpp  OnScopeExit.hpp  README.md  SelfIterator.hpp  TupleHelper.hpp  Type.hpp  Vect.hpp
cmake/: buildtype.cmake  claws-config.cmake.in  color.cmake  compiler.cmake  directory.cmake  library.cmake  module.cmake  platform.cmake  unit_tests.cmake
doc/: Doxyfile
examples/container_view/: main.cpp
include/claws/: ArrayOps.hpp  HandleTypes.hpp  TaggedData.hpp  array_ops.hpp  box.hpp  handle_types.hpp  iterator_util.hpp  lambda_ops.hpp  lambda_utils.hpp  on_scope_exit.hpp  self_iterator.hpp  tagged_data.hpp  tuple_helper.hpp
modules/algorithm/: CMakeLists.txt  CMakeSources.cmake
modules/algorithm/claws/algorithm/: constexpr_algorithm.hpp
modules/container/: CMakeLists.txt  CMakeSources.cmake
modules/container/claws/container/: array_ops.hpp  container_view.hpp  contextful_container.hpp  iterator_pair.hpp  vect.hpp
modules/iterator/: CMakeLists.txt  CMakeSources.cmake
modules/iterator/claws/iterator/: circular_iterator.hpp  iterator_view.hpp  same_val_iterator.hpp  self_iterator.hpp
modules/utils/: CMakeLists.txt  CMakeSources.cmake
modules/utils/claws/utils/: box.hpp  contextful_container.hpp  handle_types.hpp  iterator_util.hpp  lambda_ops.hpp  lambda_utils.hpp  on_scope_exit.hpp  tagged_data.hpp  tuple_helper.hpp  type.hpp
tests/claws-container/: CMakeLists.txt  vect-test.cpp
tests/claws-utils/: CMakeLists.txt  box-test.cpp  lambda_utils-test.cpp
tests/handles/: should_compile.cpp
